--- a/templates/tournoi/index.html.twig
+++ b/templates/tournoi/index.html.twig
@@ -1,20 +1,53 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TournoiController!{% endblock %}
+{% block title %}Tournoi index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Tournoi index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>NomTournoi</th>
+                <th>NomOrganisation</th>
+                <th>DateDebut</th>
+                <th>DateFin</th>
+                <th>NbJoueurMax</th>
+                <th>Description</th>
+                <th>BanniereTr</th>
+                <th>LienTwitch</th>
+                <th>CreatedAt</th>
+                <th>UpdatedAt</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for tournoi in tournois %}
+            <tr>
+                <td>{{ tournoi.id }}</td>
+                <td>{{ tournoi.nomTournoi }}</td>
+                <td>{{ tournoi.nomOrganisation }}</td>
+                <td>{{ tournoi.dateDebut ? tournoi.dateDebut|date('Y-m-d') : '' }}</td>
+                <td>{{ tournoi.dateFin ? tournoi.dateFin|date('Y-m-d') : '' }}</td>
+                <td>{{ tournoi.nbJoueurMax }}</td>
+                <td>{{ tournoi.description }}</td>
+                <td>{{ tournoi.banniereTr }}</td>
+                <td>{{ tournoi.lienTwitch }}</td>
+                <td>{{ tournoi.createdAt ? tournoi.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ tournoi.updatedAt ? tournoi.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('app_tournoi_show', {'id': tournoi.id}) }}">show</a>
+                    <a href="{{ path('app_tournoi_edit', {'id': tournoi.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="12">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/TournoisEsport/src/Controller/TournoiController.php'|file_link(0) }}">src/Controller/TournoiController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/TournoisEsport/templates/tournoi/index.html.twig'|file_link(0) }}">templates/tournoi/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_tournoi_new') }}">Create new</a>
 {% endblock %}
