--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,16 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         {% block stylesheets %}
-        {% endblock %}
-        {% block javascripts %}
         {% endblock %}
     </head>
     <body>
-        {% block body %}
+        <div id="main-container">
+            <div id="sidebar">
+                <img class="logo" src="img/logo.png" alt="Logo victoryforge">
+                <a href="{{ path('app_home') }}">Accueil</a>
+                <a href="#">Profil</a>
+                <a href="#">Organiser un tournoi
+                    {# <span class="material-symbols-outlined">
+                        chevron_right
+                    </span> #}
+                </a>
+                <a href="#">Tournois rejoint</a>
+                <a href="#">Crée une équipe</a>
+            </div>
+
+            <div>
+
+            </div>
+            <div id="content"> 
+                {% block body %}
+                {% endblock %}
+            </div>
+        </div>
+        {% block javascripts %}
+        <script src="js/script.js"></script> 
         {% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
