--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}TournoisEsport{% endblock %}
 
 {% block body %}
+
+<div class="dropdown">
+    <button onclick="showDropdown()" class="dropbtn" id="selectGameButton">
+       Sélectionnez votre jeu
+    </button>
+    <div id="myDropdown" class="dropdown-content">
+        {% for jeu in jeux %}
+            <a href="#" onclick="selectGame('{{ jeu.id }}' , ' {{ jeu.nomJeu }}' )">{{ jeu.nomJeu }}</a>
+        {% endfor %}
+    </div>
+</div>
+
+{% for tournoi in tournois %}
+    <div class="tournament-item">
+        <img src="{{ tournoi.banniereTr }}" alt="Bannière tournoi">
+        <p>{{ tournoi.nomTournoi }}</p>
+        <p>{{ tournoi.nomOrganisation }}</p>
+
+        <div class="tournament-time">
+            <p>{{ tournoi.dateDebut | format_datetime(locale='fr',pattern="EE dd MMM") }}</p>
+            <p>{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}</p>
+        </div>
+    </div>
+{% endfor %}
 
 {% endblock %}
