--- a/templates/tournoi/new.html.twig
+++ b/templates/tournoi/new.html.twig
@@ -1,13 +1,9 @@
-
-
 {% extends 'base.html.twig' %}
-
-{% block title %}New Tournoi{% endblock %}
+{% block title %}Organiser un tournoi{% endblock %}
 
 {% block body %}
-    <h1>Create new Tournoi</h1>
+<h1>Créer un tournoi</h1>
 
-    {{ include('tournoi/_form.html.twig') }}
+{{ include("tournoi/_form.html.twig") }}
 
-    <a href="{{ path('app_tournoi_index') }}">back to list</a>
 {% endblock %}
