--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
 html {
   height: 100%;
 }
@@ -40,11 +46,17 @@ body {
   padding: 10px 0 0 10px;
 }
 
+.logo {
+  display: block;
+  margin: 20px auto;
+  width: 90%;
+}
+
 /* ------------------------------ */
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498db;
+  background-color: #000000;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -94,9 +106,9 @@ body {
 }
 
 .tournament-item {
-  border: 1px solid #2c31472b;
+  border: 1px solid rgb(255, 255, 255);
   width: 350px;
-  height: 350px;
+  height: 400px;
   gap: 10px;
 }
 
@@ -110,4 +122,8 @@ body {
   height: 200px;
   background-size: cover;
   background-position: center;
+}
+
+body {
+  background-color: #282828;
 }
