--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,11 +15,12 @@
 
 <body>
 	<div id="main-container">
+		{% block sidebar %}
 		<div id="sidebar">
 			<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
 			<hr>
 			<a href="{{ path('app_home') }}">Accueil</a>
-			<a href="#">Profil</a>
+			<a href="{{ path('app_profil') }}">Profil</a>
 			<a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
 			<a href="">Tournois rejoint</a>
 			<a href="#">Crée une équipe</a>
@@ -27,11 +28,8 @@
 			<a href="{{ path('app_login') }}">Se connecter</a>
 			{% endif %}
 			<a href="{{ path('app_register') }}">S'enregistrer</a>
-
-			<div class="profil-container">
-				{# <img src="{{ asset('img/lol.jpg') }}" alt="Photo de profil"> #}
-			</div>
 		</div>
+		{% endblock %}
 
 
 		<div id="content"> {% block body %}{% endblock %}
