--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,29 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>
-		{% block title %}Welcome!
-		{% endblock %}
-	</title>
-	<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
-	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /> {%
+	<head>
+		<meta charset="UTF-8"/>
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/> {%
 	block stylesheets %}{% endblock %}
-</head>
+		</head>
 
-<body>
-	<div id="main-container">
-		{% block sidebar %}
-		<div id="sidebar">
-			<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
-			<hr>
-			<a href="{{ path('app_home') }}">Accueil</a>
-			<a href="{{ path('app_profil') }}">Profil</a>
-			<a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
-			<a href="">Tournois rejoint</a>
-			<a href="{{ path('new_equipe') }}">Crée une équipe</a>
-			{% if app.user == null %}
-			<a href="{{ path('app_login') }}">Se connecter</a>
-			<a href="{{ path('app_register') }}">S'enregistrer</a>
-			{% else %}
-			<a href="{{ path('app_logout') }}">Se déconnecter</a>
-			{% endif %}
-		<div>
-			{% if app.user %}
-			{# <p><img src="{{ vich_uploader_asset(equipe, 'imageFile') }}" alt="Photo de profil"> {{ app.user.pseudo }}</p> #}
-			{% endif %}
-		</div>
-	</div>
-		{% endblock %}
+		<body>
+			<div id="main-container">
+				{% block sidebar %}
+					{{ include ('include/sidebar.html.twig') }}
+				{% endblock %}
 
-		<div id="content"> {% block body %}{% endblock %}
-		</div>
-	</div>
-	{% block javascripts %}
-	<script src="{{ asset('js/script.js') }}"></script>
-	{% endblock %}
-</body>
+				<div id="content"> {% block body %}{% endblock %}
+					</div>
+				</div>
+				{% block javascripts %}
+					<script src="{{ asset('js/script.js') }}"></script>
+				{% endblock %}
+			</body>
 
-</html>
+		</html>
