Mise en place détails tournoi

--- a/templates/include/sidebar.html.twig
+++ b/templates/include/sidebar.html.twig
@@ -1,6 +1,6 @@
 <div id="sidebar">
 	<div class="top-menu">
-		<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/>
+		<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/></a>
 		<hr>
 		<a href="{{ path('app_home') }}">Accueil</a>
 		<a href="{{ path('app_profil') }}">Profil</a>
@@ -9,7 +9,7 @@
 		<a href="{{ path('new_equipe') }}">Crée une équipe</a>
 		{% if app.user == null %}
 			<a href="{{ path('app_login') }}">Se connecter</a>
-			<a href="{{ path('app_register') }}">S'enregistrer</a>
+			<a href="{{ path('app_register') }}">S'enregistrer</a>  
 		{% else %}
 			<a href="{{ path('app_logout') }}">Se déconnecter</a>
 		{% endif %}
