--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -46,7 +46,7 @@
 	<h2>Mes tournois</h2>
 
 	{% for tournoi in tournois %}
-		<img src="{{ vich_uploader_asset(tournoi, 'imageFile') }}" alt="Logo d'un tournoi"/>
+		<img src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Logo d'un tournoi"/>
 		<p></p>
 	{% endfor %}
 {% endblock %}
