--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,42 +1,40 @@
 {% extends 'base.html.twig' %}
-{% block title %}TournoisEsport
+
+{% block title %}
+	TournoisEsport
 {% endblock %}
 
 
 {% block body %}
 	<div class="dropdown">
 		<button onclick="showDropdown()" class="dropbtn" id="selectGameButton">
-			Sélectionnez votre jeu
+			Sélectionnez un jeu
 		</button>
 		<div id="myDropdown" class="dropdown-content">
 			{% for jeu in jeux %}
-			<a href="#" onclick="selectGame('{{ jeu.id }}' , '{{ jeu.nomJeu }}' )">{{
+				<a href="#" onclick="selectGame('{{ jeu.id }}' , '{{ jeu.nomJeu }}' )">{{
 				jeu.nomJeu
 				}}</a>
 			{% endfor %}
 		</div>
 	</div>
 
-	<div class="tournois-list">
-		{% for tournoi in tournois %}
-		<div class="tournament-item">
-			<div class="tr-container">
-				<div>
-					<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière tournoi" />
-					<p>{{ tournoi.nomTournoi }}</p>
-					<p>{{ tournoi.nomOrganisation }}</p>
-				</div>
+	{% for tournoi in tournois %}
+		<a href="{{ path('app_tournoi_show', {'id' : tournoi.id }) }}" class="tournois-list">
+			<div class="tournament-item">
+				<div class="tr-container">
+					<div>
+						<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière tournoi"/>
+						<p>{{ tournoi.nomTournoi }}</p>
+						<p>{{ tournoi.nomOrganisation }}</p>
+					</div>
 
-				<div class="tournament-time">
-					<p>
-						{{ tournoi.dateDebut | format_datetime(locale='fr',pattern="EE dd MMM") }}
-					</p>
-					<p>
-						{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}
-					</p>
+					<div class="tournament-time">
+						<p>{{ tournoi.dateDebut | format_datetime(locale='fr',pattern="EE dd MMM") }}</p>
+						<p>{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		{% endfor %}
-	</div>
+		</a>
+	{% endfor %}
 {% endblock %}
