--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -1,60 +1,63 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tournoi{% endblock %}
+{% block title %}Tournoi
+{% endblock %}
 
 {% block body %}
-    <h1>Tournoi</h1>
+	<h1>Tournoi</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ tournoi.id }}</td>
-            </tr>
-            <tr>
-                <th>NomTournoi</th>
-                <td>{{ tournoi.nomTournoi }}</td>
-            </tr>
-            <tr>
-                <th>NomOrganisation</th>
-                <td>{{ tournoi.nomOrganisation }}</td>
-            </tr>
-            <tr>
-                <th>DateDebut</th>
-                <td>{{ tournoi.dateDebut ? tournoi.dateDebut|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>DateFin</th>
-                <td>{{ tournoi.dateFin ? tournoi.dateFin|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>NbJoueurMax</th>
-                <td>{{ tournoi.nbJoueurMax }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ tournoi.description }}</td>
-            </tr>
-            <tr>
-                <th>BanniereTr</th>
-                <td>{{ tournoi.banniereTr }}</td>
-            </tr>
-            <tr>
-                <th>LienTwitch</th>
-                <td>{{ tournoi.lienTwitch }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ tournoi.createdAt ? tournoi.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ tournoi.updatedAt ? tournoi.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+	{# <table class="table">
+														        <tbody>
+														            <tr>
+														                <th>Id</th>
+														                <td>{{ tournoi.id }}</td>
+														            </tr>
+														            <tr>
+														                <th>NomTournoi</th>
+														                <td>{{ tournoi.nomTournoi }}</td>
+														            </tr>
+														            <tr>
+														                <th>NomOrganisation</th>
+														                <td>{{ tournoi.nomOrganisation }}</td>
+														            </tr>
+														            <tr>
+														                <th>DateDebut</th>
+														                <td>{{ tournoi.dateDebut ? tournoi.dateDebut|date('Y-m-d') : '' }}</td>
+														            </tr>
+														            <tr>
+														                <th>DateFin</th>
+														                <td>{{ tournoi.dateFin ? tournoi.dateFin|date('Y-m-d') : '' }}</td>
+														            </tr>
+														            <tr>
+														                <th>NbJoueurMax</th>
+														                <td>{{ tournoi.nbJoueurMax }}</td>
+														            </tr>
+														            <tr>
+														                <th>Description</th>
+														                <td>{{ tournoi.description }}</td>
+														            </tr>
+														            <tr>
+														                <th>BanniereTr</th>
+														                <td>{{ tournoi.banniereTr }}</td>
+														            </tr>
+														            <tr>
+														                <th>LienTwitch</th>
+														                <td>{{ tournoi.lienTwitch }}</td>
+														            </tr>
+														            <tr>
+														                <th>CreatedAt</th>
+														                <td>{{ tournoi.createdAt ? tournoi.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+														            </tr>
+														            <tr>
+														                <th>UpdatedAt</th>
+														                <td>{{ tournoi.updatedAt ? tournoi.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+														            </tr>
+														        </tbody>
+														    </table> #}
 
-    <a href="{{ path('app_tournoi_edit', {'id': tournoi.id}) }}">edit</a>
 
-    {{ include('tournoi/_delete_form.html.twig') }}
+	{% if tournoi.organisateur.id == app.user.id %}
+		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">edit</a>
+		{{ include('tournoi/_delete_form.html.twig') }}
+	{% endif %}
 {% endblock %}
