--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,8 +125,8 @@ body {
 
 .tournament-item {
   border: 1px solid rgb(255, 255, 255);
-  width: 350px;
-  height: 400px;
+  width: 400px;
+  height: auto;
   gap: 10px;
 }
 
@@ -144,4 +144,49 @@ body {
 
 body {
   background-color: #282828;
+}
+
+.logo-trd {
+  height: 50px;
+  width: 50px;
+}
+
+.head-trd {
+  display: flex;
+
+}
+
+.follow-trd {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.head-flw {
+  display: flex;
+  align-items: center;
+}
+
+.tab-bar {
+  display: flex;
+}
+
+.tab-container .tab {
+  cursor: pointer;
+  padding: 10px;
+  display: inline-block;
+}
+
+.content {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+.tab-active {
+  border-bottom: 2px solid rgb(255, 0, 0); /* ou tout autre style de votre choix */
+}
+
+.tab:hover {
+  border-bottom: 1px solid grey;
 }
