--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,7 +178,6 @@ body {
 }
 
 .content {
-  border: 1px solid #ccc;
   padding: 10px;
   margin-top: 5px;
 }
@@ -189,4 +188,9 @@ body {
 
 .tab:hover {
   border-bottom: 1px solid grey;
+}
+
+
+.main-content {
+  width: 60%;
 }
