--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -4,39 +4,41 @@
 {% endblock %}
 
 {% block body %}
-	<div class="head-trd">
-		<img class="logo-trd" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo du tournoi"/>
-		<div class="follow-trd">
-			<a href="">Valorant EU Daily by MEST.gg</a>
-			<div class="head-flw">
-				<a href="">Follow</a>
-				<p>10 Follower</p>
+	<div class="main-content">
+		<div class="head-trd">
+			<img class="logo-trd" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo du tournoi"/>
+			<div class="follow-trd">
+				<a href="">Valorant EU Daily by MEST.gg</a>
+				<div class="head-flw">
+					<a href="">Follow</a>
+					<p>10 Follower</p>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<h2>{{ tournoi.nomOrganisation }}</h2>
+		<h2>{{ tournoi.nomOrganisation }}</h2>
 
-	<div class="tab-bar">
-		<div class="tab-container">
-			<div class="tab" onclick="openTab('regles')">REGLES</div>
-			<div class="tab" onclick="openTab('participants')">PARTICIPANTS</div>
-			<div class="tab" onclick="openTab('matchs')">MATCHS</div>
-			<!-- Plus de tabs si nécessaire -->
+		<div class="tab-bar">
+			<div class="tab-container">
+				<div class="tab" id="tab-regles" onclick="openTab('regles')">REGLES</div>
+				<div class="tab" onclick="openTab('participants')">PARTICIPANTS</div>
+				<div class="tab" onclick="openTab('matchs')">MATCHS</div>
+				<!-- Plus de tabs si nécessaire -->
+			</div>
+		</div>
+
+		<div id="regles" class="content">
+			{{ tournoi.description | raw}}
+			{{ tournoi.jeu }}
+			{{  }}
+		</div>
+		<div id="participants" class="content" style="display:none;">
+			<p>Participants</p>
+		</div>
+		<div id="matchs" class="content" style="display:none;">
+			<p>Matchs</p>
 		</div>
 	</div>
-
-	<div id="regles" class="content">
-		{{ tournoi.description | raw}}
-	</div>
-	<div id="participants" class="content" style="display:none;">
-		<p>Participants</p>
-	</div>
-	<div id="matchs" class="content" style="display:none;">
-		<p>Matchs</p>
-	</div>
-
-
 	{% if tournoi.organisateur.id == app.user.id %}
 		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">edit</a>
 		{{ include('tournoi/_delete_form.html.twig') }}
