Implémentation Participer a un Tournoi/Match

--- a/templates/tournoi/new.html.twig
+++ b/templates/tournoi/new.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
-{% block title %}Organiser un tournoi{% endblock %}
+{% block title %}Organiser un tournoi
+{% endblock %}
 
 {% block body %}
-<h1>Créer un tournoi</h1>
+	<h1>Créer un tournoi</h1>
 
-{{ include("tournoi/_form.html.twig") }}
+	{{ include("tournoi/_form.html.twig") }}
 
 {% endblock %}
