--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -37,8 +37,8 @@
 		</div>
 		<div id="participants" class="content" style="display:none;">
 			<p>Joueurs ({{ tournoi.participantTournois | length }})</p>
-			{% for joueur in tournoi.participantTournois %}
-				{{ joueur.pseudo }}
+			{% for participant in tournoi.participantTournois %}
+				{{ participant.utilisateur.pseudo }}
 			{% endfor %}
 		</div>
 		<div id="matchs" class="content" style="display:none;">
@@ -55,8 +55,8 @@
 
 
 	{% if tournoi.organisateur.id == app.user.id %}
-		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">edit</a>
 		<a href="{{ path('new_match', {'id' : tournoi.id}) }}">Ajouter un match</a>
+		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">edit</a>
 		{{ include('tournoi/_delete_form.html.twig') }}
 	{% else %}
 		<button data-tournoi-id={{tournoi.id}} id="btnParticiper">Participer</button>
