--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 			{% block javascripts %}
-				{{ encore_entry_script_tags('app') }}
+				{# {{ encore_entry_script_tags('app') }} #}
 				<script src="{{ asset('js/script.js') }}"></script>
 			{% endblock %}
 		</body>
