--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -45,20 +45,19 @@
 			<p>Matchs</p>
 			<ul>
 				{% for index, match in tournoi.getGameMatches %}
-					<li>{{ index + 1 }}:
-						{{ match.dateDebut | format_datetime('short', 'short', locale='fr') }}</li>
+					<li>
+						{{ index + 1 }}:
+						{{ match.dateDebut | format_datetime('short', 'short', locale='fr') }}
+					</li>
 				{% endfor %}
 			</ul>
-
 		</div>
 	</div>
-
-
-	{% if tournoi.organisateur.id == app.user.id %}
-		<a href="{{ path('new_match', {'id' : tournoi.id}) }}">Ajouter un match</a>
-		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">edit</a>
+	{% if app.user is not null and tournoi.organisateur.id == app.user.id %}
+		{# <a href="{{ path('new_match', {'id' : tournoi.id}) }}">Ajouter un match</a>
+		<a href="{{ path('app_tournoi_edit', {'id' : tournoi.id}) }}">Edit</a> #}
 		{{ include('tournoi/_delete_form.html.twig') }}
-	{% else %}
+	{% elseif app.user is not null %}
 		<!-- Bouton pour ouvrir la modale -->
 		{% set isParticipant = false %}
 		{% for participant in tournoi.participantTournois %}
@@ -69,7 +68,6 @@
 		{% if not isParticipant %}
 			<button id="btnParticiper" data-tournoi-id="{{ tournoi.id }}" data-jeu-id="{{ tournoi.jeu.id }}">Participer</button>
 		{% endif %}
-
 
 		<!-- Modale -->
 		<div id="pseudoModal" class="modal">
