--- a/templates/include/sidebar.html.twig
+++ b/templates/include/sidebar.html.twig
@@ -3,7 +3,6 @@
 		<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/></a>
 		<hr>
 		<a href="{{ path('app_home') }}">Accueil</a>
-		<a href="{{ path('app_profil') }}">Profil</a>
 		<a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
 		<a href="">Tournois rejoint</a>
 		<a href="{{ path('new_equipe') }}">Crée une équipe</a>
@@ -16,11 +15,16 @@
 	</div>
 	<div class="profil-menu">
 		{% if app.user and app.user.photo %}
+		<a href="{{ path('app_profil', {'id' : utilisateur.id}) }}">
 			<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
 			<p>{{ app.user.pseudo }}</p>
+		</a>
 		{% elseif app.user %}
+		<a href="{{ path('app_profil') }}">
 			<img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
 			<p>{{ app.user.pseudo }}</p>
+		</a>
+
 		{% endif %}
 	</div>
 </div>
