--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -1,20 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}Profil
 {% endblock %}
+
 {% block sidebar %}
-	<div id="sidebar">
-		<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/>
-		<hr/>
-		<a href="{{ path('app_home') }}">Accueil</a>
-		<a href="{{ path('app_profil') }}">Profil</a>
-		<a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
-		<a href="">Paramètres du compte</a>
-		<a href="{{ path('app_logout') }}">Se déconnecter</a>
-	</div>
-
+	{{ include ('include/profil_sidebar.html.twig') }}
 {% endblock %}
-{% block body %}
 
+{% block body %}
 	<h1>{{ app.user.pseudo }}</h1>
 
 	<div class="titre-equipe">
