--- a/templates/include/sidebar.html.twig
+++ b/templates/include/sidebar.html.twig
@@ -6,6 +6,7 @@
 		<a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
 		<a href="">Tournois rejoint</a>
 		<a href="{{ path('new_equipe') }}">Crée une équipe</a>
+		<a href="{{ path('app_chat') }}">Chat</a>
 		{% if app.user == null %}
 			<a href="{{ path('app_login') }}">Se connecter</a>
 			<a href="{{ path('app_register') }}">S'enregistrer</a>
