--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -1,20 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MessageController!{% endblock %}
+{% block title %}Hello MessageController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<div id="">
+		<div class="">
+			<a class="logo" href=""><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/></a>
+			<hr>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+			<a href=""></a>
+		</div>
+		<div class="">
+			<a
+				href="">
+				{# <img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil"> #}
+				<p></p>
+			</a>
+			<a
+				href="">
+				{# <img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil"> #}
+				<p></p>
+			</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/TournoisEsport/src/Controller/MessageController.php'|file_link(0) }}">src/Controller/MessageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/TournoisEsport/templates/message/index.html.twig'|file_link(0) }}">templates/message/index.html.twig</a></code></li>
-    </ul>
-</div>
+		</div>
+	</div>
 {% endblock %}
+
+{% block javascripts %}
+	<script src="{{ asset('js/message.js') }}"></script>
+{% endblock %}
+```
