--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,33 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Se connecter{% endblock %}
+{% block title %}Se connecter
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-    {% if app.user %}
-    <div class="mb-3">
-        Tu est connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-    </div>
-    {% endif %}
+		{% if app.user %}
+			<div class="mb-3">
+				Tu est connecté en tant que
+				{{ app.user.userIdentifier }},
+				<a href="{{ path('app_logout') }}">Se déconnecter</a>
+			</div>
+		{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
-    <label for="inputEmail">Email : </label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
-        autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe : </label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password"
-        required>
+		<h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
+		<label for="inputEmail">Email :
+		</label>
+		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+		<label for="inputPassword">Mot de passe :
+		</label>
+		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Connexion
-    </button>
+		<button class="btn btn-lg btn-primary" type="submit">
+			Connexion
+		</button>
 
-    <p>Pas de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous</a> !</p>
-</form>
+		<p>Pas de compte ?
+			<a href="{{ path('app_register') }}">Inscrivez-vous</a>
+			!</p>
+		<p>Vous avez oublié votre mot de passe ?
+			<a href="{{ path('app_forgot_password_request') }}">Réinitialisez-le</a>!
+		</p>
+	</form>
 {% endblock %}
