--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,13 +4,12 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Bienvenue !
 			{% endblock %}
 		</title>
 		<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-		{%
-	block stylesheets %}
+		{% block stylesheets %}
 			{# {{ encore_entry_link_tags('app') }} #}
 		{% endblock %}
 	</head>
