--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,10 +262,12 @@ body {
 
 .message-sent {
   text-align: right;
+  display: block;
 }
 
 .message-received {
   text-align: left;
+  display: block;
 }
 
 #send-message-form input {
