--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -3,206 +3,44 @@
 {% block title %}Hello RoomController!
 {% endblock %}
 
-{% block stylesheets %}
-	{{ parent() }}
-	<link rel="stylesheet" href="{{ asset('css/chat.css') }}">
-{% endblock %}
-
 {% block sidebar %}{% endblock %}
 
 {% block body %}
-	{# <div id="chat" data-user-id="{{ app.user.id }}">
-					<div class="rooms">
-						{% for room in rooms %}
-							<div class="room-item" data-room-id={{room.id}}>
-								{% for utilisateur in room.utilisateurs %}
-									{% if utilisateur.id != app.user.id %}
-										<p>{{utilisateur.pseudo}}</p>
-									{% endif %}
-								{% endfor %}
-								<p>{{ room.lastMessage }}</p>
-							</div>
-			
-							<hr>
-			
-						{% endfor %}
-					</div>
-					<div class="message-container">
-						<div id="messages"></div>
-						<div class="message-form">
-							<form id="send-message-form">
-								<input type="text" id="message-text" placeholder="Écrivez un message...">
-								<button type="submit">Envoyer</button>
-							</form>
-						</div>
-					</div>
-				</div> #}
-	<div class="wrapper">
-		<div class="container">
-			<div class="left">
-				<div class="top">
-					<input type="text" placeholder="Search"/>
-					<a href="javascript:;" class="search"></a>
-				</div>
-				<ul class="people">
-					{% for room in rooms %}
-						<li class="person" data-chat="person1">
-							<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt=""/>
-
-
-							{% for utilisateur in room.utilisateurs %}
-								{% if utilisateur.id != app.user.id %}
-									<p></p>
-									<span class="name">{{utilisateur.pseudo}}</span>
-								{% endif %}
-							{% endfor %}
-
-							{# <span class="time">{{ room.updatedAt  }}</span> #}
-							<span class="preview">{{ room.lastMessage }}</span>
-						</li>
+	<div id="chat" data-user-id="{{ app.user.id }}">
+		<div class="rooms">
+			{% for room in rooms %}
+				<div class="room-item" data-room-id={{room.id}}>
+					{% for utilisateur in room.utilisateurs %}
+						{% if utilisateur.id != app.user.id %}
+							<p>{{utilisateur.pseudo}}</p>
+						{% endif %}
 					{% endfor %}
-				</ul>
-			</div>
-			<div class="right">
-				<div class="top">
-					<span>To:
-						<span class="name">Dog Woofson</span>
-					</span>
+					<p class="last-message" id="last-message-{{room.id}}">{{ room.lastMessage }}</p>
+					<p>{{ room.createdAt|format_datetime('short', 'short', locale='fr') }}</p>
 				</div>
-				<div class="chat" data-chat="person1">
-					<div class="conversation-start">
-						<span>Today, 6:48 AM</span>
-					</div>
-					<div class="bubble you">
-						Hello,
-					</div>
-				</div>
-				<div class="chat" data-chat="person2">
-					<div class="conversation-start">
-						<span>Today, 5:38 PM</span>
-					</div>
-					<div class="bubble you">
-						Hello, can you hear me?
-					</div>
-					<div class="bubble you">
-						I'm in California dreaming
-					</div>
-					<div class="bubble me">
-						... about who we used to be.
-					</div>
-					<div class="bubble me">
-						Are you serious?
-					</div>
-					<div class="bubble you">
-						When we were younger and free...
-					</div>
-					<div class="bubble you">
-						I've forgotten how it felt before
-					</div>
-				</div>
-				<div class="chat" data-chat="person3">
-					<div class="conversation-start">
-						<span>Today, 3:38 AM</span>
-					</div>
-					<div class="bubble you">
-						Hey human!
-					</div>
-					<div class="bubble you">
-						Umm... Someone took a shit in the hallway.
-					</div>
-					<div class="bubble me">
-						... what.
-					</div>
-					<div class="bubble me">
-						Are you serious?
-					</div>
-					<div class="bubble you">
-						I mean...
-					</div>
-					<div class="bubble you">
-						It’s not that bad...
-					</div>
-					<div class="bubble you">
-						But we’re probably gonna need a new carpet.
-					</div>
-				</div>
-				<div class="chat" data-chat="person4">
-					<div class="conversation-start">
-						<span>Yesterday, 4:20 PM</span>
-					</div>
-					<div class="bubble me">
-						Hey human!
-					</div>
-					<div class="bubble me">
-						Umm... Someone took a shit in the hallway.
-					</div>
-					<div class="bubble you">
-						... what.
-					</div>
-					<div class="bubble you">
-						Are you serious?
-					</div>
-					<div class="bubble me">
-						I mean...
-					</div>
-					<div class="bubble me">
-						It’s not that bad...
-					</div>
-				</div>
-				<div class="chat" data-chat="person5">
-					<div class="conversation-start">
-						<span>Today, 6:28 AM</span>
-					</div>
-					<div class="bubble you">
-						Wasup
-					</div>
-					<div class="bubble you">
-						Wasup
-					</div>
-					<div class="bubble you">
-						Wasup for the third time like is
-						<br/>you blind bitch
-					</div>
 
-				</div>
-				<div class="chat" data-chat="person6">
-					<div class="conversation-start">
-						<span>Monday, 1:27 PM</span>
-					</div>
-					<div class="bubble you">
-						So, how's your new phone?
-					</div>
-					<div class="bubble you">
-						You finally have a smartphone :D
-					</div>
-					<div class="bubble me">
-						Drake?
-					</div>
-					<div class="bubble me">
-						Why aren't you answering?
-					</div>
-					<div class="bubble you">
-						howdoyoudoaspace
-					</div>
-				</div>
-				<div class="write">
-					<a href="javascript:;" class="write-link attach"></a>
-					<input type="text"/>
-					<a href="javascript:;" class="write-link smiley"></a>
-					<a href="javascript:;" class="write-link send"></a>
-				</div>
+				<hr>
+
+			{% endfor %}
+		</div>
+		<div class="message-container">
+			<div id="messages"></div>
+			<div class="message-form">
+				<form class="hide-form" id="send-message-form">
+					<textarea id="message-text" placeholder="Écrivez un message..."></textarea>
+					<button class="btn-send" type="submit">
+						<span class="material-symbols-outlined">
+							send
+						</span>
+					</button>
+				</form>
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
+
 
 {% block javascripts %}
 	{# {{ parent() }} #}
-	{# <script src="{{ asset('js/chat.js') }}"></script> #}<script src="{{ asset('js/chat1.js') }}"> </script>
+	<script src="{{ asset('js/chat.js') }}"></script>
 {% endblock %}
-{# 
-<form action="">
-            <input type="text" id="message" placeholder="Message">
-            <button type="submit">Envoyer</button>
-        </form> #}
